<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    tools:context=".GPS">

    <!-- Title -->
    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back" />

    <TextView
        android:id="@+id/lblOptionTitle"
        style="@style/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title_gps"
        app:layout_constraintStart_toEndOf="@+id/imgClose"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_soft"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOptionTitle" />
    <!--  -->

    <!-- Body -->
    <ProgressBar
        android:id="@+id/pbrGPSButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:indeterminateDrawable="@drawable/gps_initial_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/lblLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtLatitud"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/lblMsgButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/gps_initial"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/pbrGPSButton"
        app:layout_constraintEnd_toEndOf="@+id/pbrGPSButton"
        app:layout_constraintStart_toStartOf="@+id/pbrGPSButton"
        app:layout_constraintTop_toTopOf="@+id/pbrGPSButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glnCenterVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/lblLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLongitud"
        app:layout_constraintTop_toTopOf="@+id/txtLatitud" />

    <TextView
        android:id="@+id/txtLatitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/coords_initial"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/pbrGPSButton"
        app:layout_constraintStart_toEndOf="@+id/glnCenterVertical"
        app:layout_constraintBottom_toTopOf="@+id/txtLongitud" />

    <TextView
        android:id="@+id/lblLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/lng"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtLongitud"
        app:layout_constraintTop_toTopOf="@+id/txtLongitud" />

    <TextView
        android:id="@+id/txtLongitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/coords_initial"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLatitud"
        app:layout_constraintStart_toEndOf="@+id/glnCenterVertical"
        app:layout_constraintBottom_toTopOf="@+id/txtAltitud" />

    <TextView
        android:id="@+id/txtAltitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:text=""
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/txtLongitud"
        app:layout_constraintStart_toEndOf="@+id/glnCenterVertical"
        app:layout_constraintBottom_toTopOf="@+id/txtPrecision" />

    <TextView
        android:id="@+id/lblPrecision"
        style="@style/appCoordsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/prc"
        app:layout_constraintBottom_toTopOf="@+id/barPrecisionMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPrecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/lblPrecision"
        app:layout_constraintTop_toTopOf="@+id/lblPrecision" />

    <!-- Precision bar -->
    <TextView
        android:id="@+id/barPrecisionHigh"
        android:layout_width="70dp"
        android:layout_height="13dp"
        android:background="@drawable/precisionbar_background_green"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/barPrecisionMedium"
        app:layout_constraintTop_toTopOf="@+id/barPrecisionMedium" />

    <TextView
        android:id="@+id/barPrecisionMedium"
        android:layout_width="70dp"
        android:layout_height="13dp"
        android:background="@drawable/precisionbar_background_yellow"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/lblPrecisionMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/barPrecisionLow"
        android:layout_width="70dp"
        android:layout_height="13dp"
        android:background="@drawable/precisionbar_background_red"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/barPrecisionMedium"
        app:layout_constraintTop_toTopOf="@+id/barPrecisionMedium" />

    <TextView
        android:id="@+id/lblPrecisionHigh"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bar_label_high"
        app:layout_constraintEnd_toStartOf="@+id/lblPrecisionMedium"
        app:layout_constraintTop_toTopOf="@+id/lblPrecisionMedium" />

    <TextView
        android:id="@+id/lblPrecisionMedium"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/bar_label_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblPrecisionLow"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bar_label_low"
        app:layout_constraintStart_toEndOf="@+id/lblPrecisionMedium"
        app:layout_constraintTop_toTopOf="@+id/lblPrecisionMedium" />
    <!--  -->

</androidx.constraintlayout.widget.ConstraintLayout>