<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    tools:context=".Archive">

    <!-- Title -->
    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblOptionTitle"
        style="@style/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title_archive"
        app:layout_constraintStart_toEndOf="@+id/imgClose"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_soft"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOptionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <!--  -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcwSendList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lblLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lblResumeNoSend" />

    <!-- Temporales -->
        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcwSendList" />

        <TextView
            android:id="@+id/txtTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btnShow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <!-- -->

    <ImageView
        android:id="@+id/imvResumeSend"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        app:srcCompat="@drawable/ic_baseline_check"
        app:layout_constraintTop_toTopOf="@+id/lblResumeSend"
        app:layout_constraintEnd_toStartOf="@+id/lblResumeSend"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/lblResumeSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lblResumeNoSend"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imvResumeNoSend"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        app:srcCompat="@drawable/ic_baseline_nocheck"
        app:layout_constraintTop_toTopOf="@+id/lblResumeNoSend"
        app:layout_constraintEnd_toStartOf="@+id/lblResumeNoSend"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/lblResumeNoSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_nosend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imvResumeNonCode"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        app:srcCompat="@drawable/ic_baseline_cancel"
        app:layout_constraintTop_toTopOf="@+id/lblResumeNonCode"
        app:layout_constraintEnd_toStartOf="@+id/lblResumeNonCode"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/lblResumeNonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_noncode"
        app:layout_constraintStart_toEndOf="@+id/lblResumeNoSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/lblResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>